# nazardeh

./: .env-sample  .gitignore  app.py
Nazardeh/: pyproject.toml
migrations/versions/: 0e6e4e5258dd_.py
src/: __init__.py  config.py  extensions.py
src/models/: __init__.py  comment.py
src/modules/: __init__.py
src/modules/comment/: __init__.py  crud.py  endpoints.py  serializers.py
