[tool.poetry]
name = "nazardeh"
version = "0.1.0"
description = ""
authors = ["kouhkan <amirkouhkan1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pytest = "^8.0.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
flask-marshmallow = "^1.2.0"
marshmallow-sqlalchemy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
